# verbena

./: .clang-format  .gitignore  Cargo.toml  LICENSE  README.md  all.h  asm.bat  build-noisy.bat  build.bat  clippy.bat  compile-pages.cc  compose-question-error.bat  compose.bat  compose_question.bat  cr.bat  emit_llvm.bat  eslint.config.js  f.bat  make_notepadpp_udl.py  meta-build.bat  meta-build.cc  notepad++_verbena.bat  notepad++_verbena.py  notepad++_verbena.xml  package-lock.json  package.json  test.py  test_examples.py  update_register_all.py  write-output.bat  write_output.bat  x.bat  z.bat  z1.bat  zs.bat  zz.bat
benchmarks/: empty.va  empty_fp.py  empty_fp.va  sqrt.va  z.bat
boot/: compiler.js  main.js  parser.js  prefix.js  test.js
db/: all.h  create-db.cc  create-test-data.cc  db.h  schema.h  update-db.cc
example/: main.cc  main.h  schema.h
examples/: loops.va  math.va  slices.va  try.va
examples_output/: lists.txt  strings.txt  types.txt
pages/: customer.html  customers.html  main.html  new-customer.html
src/: actions.html  all.h  aparser.rs  ast.rs  buttons.html  code.rs  compile_error.rs  compiler.rs  country.sql  customer-create-page.h  customer.cpp  customers-page.h  customers.cpp  customers.html  database.cc  database.h  db.cc  db.h  env.rs  error.rs  error_context.rs  etc.cc  etc.h  form-actions.html  func.rs  head.h  head.html  lib.rs  list.rs  main-page.h  main.cc  main.cpp  main.h  main.rs  menu.html  new-customer-page.h  new-customer.cpp  object.rs  olivine.h  parser.rs  (+21 more)
test-output/: biorhythms.txt  case.txt  fn.txt  range.txt  (+2 more)
(+129 files in other folders)
