[package]
name = "verbena"
version = "0.1.0"
authors = ["Russell Wallace <russell.wallace@gmail.com>"]
edition = "2024"
description = "Scripting language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/russellw/verbena"
documentation = "https://docs.rs/verbena"
readme = "README.md"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
