[package]
name = "verbena"
version = "0.1.1"
authors = ["Russell Wallace <russell.wallace@gmail.com>"]
edition = "2024"
description = "Scripting language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/russellw/verbena"
documentation = "https://docs.rs/verbena"
readme = "README.md"

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
clap = { version = "4.5", features = ["derive"] }
